<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/alertTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="left"
        android:textColor="#000"
        android:text="@string/alertTitle"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/alertMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="#000"
        android:text="@string/alertMsg"
        android:textSize="18dp" />


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:gravity="center"
            android:text="@string/tryAgain"
            android:textColor="@color/listItemText"
            android:textSize="@dimen/textSize"
            android:layout_marginLeft="1dp"
            app:layout_constraintLeft_toRightOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"

            />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:text="@string/no"
            android:textColor="@color/listItemText"
            android:textSize="@dimen/textSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>