<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/char_name_label"
        android:textAllCaps="false"
        android:textColor="@color/labelText"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Rrrrrrrrrrrrrrrr"
        android:textAllCaps="false"
        android:textSize="@dimen/textSize"
        android:textColor="@color/listItemText"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/label_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/char_height_label"
        android:textColor="@color/labelText"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Button 2"
        android:textColor="@color/listItemText"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />




    <TextView
        android:id="@+id/label_mass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/char_mass_label"
        android:textColor="@color/labelText"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <TextView
        android:id="@+id/mass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=" MASSS"
        android:textColor="@color/listItemText"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height" />




    <TextView
        android:id="@+id/label_creation_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/char_creation_date"
        android:textColor="@color/labelText"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/mass" />

    <TextView
        android:id="@+id/creationDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Button 2"
        android:textColor="@color/listItemText"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mass" />


    <TextView
        android:id="@+id/label_creation_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/char_creation_time"
        android:textColor="@color/labelText"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/creationDate" />

    <TextView
        android:id="@+id/creationTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Button 2"
        android:textColor="@color/listItemText"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creationDate" />

</android.support.constraint.ConstraintLayout>